<resources>
    <string name="app_name">ACSCE STUDENT</string>
    <string name="new_register_here">New Register Here</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="profile">User Profile</string>
    <string name="user_email">User Email Addree</string>
    <string name="user_name">User Name</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="plz_selete_image">Please Select Image</string>
    <string name="welcome_about">Welcome to About Activity</string>
    <string name="app_version">Version 2.0</string>
    <string name="info1">App is Developed to help students and faculties of VTU is accessing below useful information at their fingertips.</string>
    <string name="info2">•TimeTable\n
						•Syllabus\n
						•Faculty Information\n
						•VTU Results\n
						•ACS College of Engineering Website\n
						•NPTEL Online Courses \n
						•SWAYAM Free Online Education\n
						•And much more </string>
    <string name="info3">Thanks to All your support</string>
    <string name="welcome_developer">Welcome to Developer Activity</string>
    <string name="developer_name">Mr.Lingraj G. Naykode</string>
    <string name="acsce">ACS College of Engineering,Bangalore-74</string>
    <string name="college_name">College Name</string>
    <string name="branch">Branch And Year</string>
    <string name="branch_name">Computer Science And Engineering\nFinal Year</string>
    <string name="about">About</string>
    <string name="sign_out">Sign Out</string>
    <string name="developer">Developer</string>
    <string-array name="faculty_name">
        <item>Dr.V Mareeswari</item>
        <item>Mrs.Sunita Chalageri</item>
        <item>Mrs.Kavya G</item>
        <item>Mrs.Jyoti Metan</item>
        <item>Mr.Krishna Kumar A</item>
        <item>Dr.T.Senthil Kumaran</item>
    </string-array>
    <string name="phone_number">Phone Number</string>
    <string name="number">8668363143</string>
    <string name="email_address">Email Address</string>
    <string name="email">naykodelingraj@gmail.com</string>
    <string name="subject">Subject</string>
    <string name="subject_ex">IoT</string>
    <string name="days">Days</string>
    <string name="subjects">Subjects</string>
    <string name="time">Time</string>
    <string name="faculty">Faculty</string>
    <string name="timetable">Timetable</string>
    <string name="description">Description</string>
    <string name="click_here">Click to know more</string>
    <string name="title">Title</string>
    <string name="syllabus">Syllabus</string>
    <string-array name="Main">
        <item> Timetable </item>
        <item> Subjects </item>
        <item> Faculty </item>
        <item> VTU Results </item>
        <item> ACS College </item>
        <item> NPTEL </item>
        <item> SWAYAM </item>
    </string-array>
    <string-array name="Description">
        <item> Display TimeTable </item>
        <item> Subject And Syllabus </item>
        <item> Teacher Information</item>
        <item> Check Results </item>
        <item> ACS College Website </item>
        <item> Online Courses</item>
        <item> Free Online Education</item>
    </string-array>
    <string-array name="Week">
        <item> Monday </item>
        <item> Tuesday </item>
        <item> Wednesday </item>
        <item> Thursday </item>
        <item> Friday </item>
        <item> Saturday </item>
    </string-array>
    <string-array name="Monday">
        <item>IoT and Applications</item>
        <item>Big Data Analytics</item>
        <item>TEA BREAK</item>
        <item>User Interface Design</item>
        <item>IoT and Applications</item>
        <item>LUNCH BREAK</item>
        <item>SEMINAR</item>
    </string-array>
    <string-array name="Tuesday">
        <item>Big Data Analytics</item>
        <item>IoT and Applications</item>
        <item>TEA BREAK</item>
        <item>User Interface Design</item>
        <item>Big Data Analytics</item>
        <item>LUNCH BREAK</item>
        <item>SEMINAR</item>
    </string-array>
    <string-array name="Wednesday">
        <item>User Interface Design</item>
        <item>Big Data Analytics</item>
        <item>TEA BREAK</item>
        <item>User Interface Design</item>
        <item>IoT and Applications</item>
        <item>LUNCH BREAK</item>
        <item>PROJECT</item>
    </string-array>
    <string-array name="Thursday">
        <item>PROJECT</item>
        <item>TEA BREAK</item>
        <item>PROJECT</item>
        <item>LUNCH BREAK</item>
        <item>PROJECT</item>
    </string-array>
    <string-array name="Friday">
        <item>PROJECT</item>
        <item>TEA BREAK</item>
        <item>PROJECT</item>
        <item>LUNCH BREAK</item>
        <item>PROJECT</item>
    </string-array>
    <string-array name="Saturday">
        <item>PROJECT</item>
        <item>PROJECT</item>
        <item>PROJECT</item>
    </string-array>
    <string-array name="time1">
        <item>8:30AM - 9:30AM</item>
        <item>9:30AM - 10:30AM</item>
        <item>10:30AM - 10:45AM</item>
        <item>10:45AM - 11:45AM</item>
        <item>11:45AM - 12:45PM</item>
        <item>12:45PM - 1:30PM</item>
        <item>1:30PM - 4:00PM</item>
    </string-array>
    <string-array name="time2">
        <item>8:30AM - 9:30AM</item>
        <item>9:30AM - 10:30AM</item>
        <item>10:30AM - 10:45AM</item>
        <item>10:45AM - 11:45AM</item>
        <item>11:45AM - 12:45PM</item>
        <item>12:45PM - 1:30PM</item>
        <item>1:30PM - 4:00PM</item>
    </string-array>
    <string-array name="time3">
        <item>8:30AM - 9:30AM</item>
        <item>9:30AM - 10:30AM</item>
        <item>10:30AM - 10:45AM</item>
        <item>10:45AM - 11:45AM</item>
        <item>11:45AM - 12:45PM</item>
        <item>12:45PM - 1:30PM</item>
        <item>1:30PM - 4:00PM</item>
    </string-array>
    <string-array name="time4">
        <item>8:30AM - 10:30AM</item>
        <item>10:30AM - 10:45AM</item>
        <item>10:45AM - 12:45PM</item>
        <item>12:45PM - 1:30PM</item>
        <item>1:30PM - 4:00PM</item>
    </string-array>
    <string-array name="time5">
        <item>8:30AM - 10:30AM</item>
        <item>10:30AM - 10:45AM</item>
        <item>10:45AM - 12:45PM</item>
        <item>12:45PM - 1:30PM</item>
        <item>1:30PM - 4:00PM</item>
    </string-array>
    <string-array name="time6">
        <item>8:30AM - 10:45AM</item>
        <item>10:45AM - 1:30PM</item>
        <item>1:30PM - 4:00PM</item>
    </string-array>
    <string-array name="Faculty1">
        <item>9845198389</item>
        <item>mareesh.prasanna@gmail.com</item>
        <item>Internet of Things and Applications</item>
    </string-array>
    <string-array name="Faculty2">
        <item>9916099905</item>
        <item>sunita.chalageri@gmail.com</item>
        <item>Big Data Analytics</item>
    </string-array>
    <string-array name="Faculty3">
        <item>9620961764</item>
        <item>itskavyag@gmail.com</item>
        <item>User Interface Design</item>
    </string-array>
    <string-array name="Faculty4">
        <item>9901499699</item>
        <item>jyotimetan@gmail.com</item>
        <item>Internship / Professional Practice</item>
    </string-array>
    <string-array name="Faculty5">
        <item>9739935544</item>
        <item>krishnakumar3489@gmail.com</item>
        <item>Project work phase II</item>
    </string-array>
    <string-array name="Faculty6">
        <item>8884000900</item>
        <item>senthilvts@gmail.com</item>
        <item>Seminar</item>
    </string-array>
    <string-array name="Subjects">
        <item>Internet of Things and Applications</item>
        <item>Big Data Analytics</item>
        <item>User Interface Design</item>
        <item>Internship / Professional Practice</item>
        <item>Project work phase II</item>
        <item>Seminar</item>
    </string-array>
    <string-array name="titles">
        <item>SEMESTER – VIII</item>
        <item>Course Objectives</item>
        <item>Module - 1</item>
        <item>Module - 2</item>
        <item>Module - 3</item>
        <item>Module - 4</item>
        <item>Module - 5</item>
        <item>Course Outcomes</item>
        <item>Question paper pattern</item>
        <item>Text Books</item>
        <item>Reference Books</item>
    </string-array>
</resources>