<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/profile"
        android:id="@+id/id_profile"
        android:orderInCategory="100"
        android:icon="@drawable/ic_person_black_24dp"
        app:showAsAction="never" />

    <item
        android:title="@string/developer"
        android:id="@+id/id_developer"
        android:orderInCategory="101"
        android:icon="@drawable/ic_adb_black_24dp"
        app:showAsAction="never" />

    <item
        android:title="@string/about"
        android:id="@+id/id_about"
        android:orderInCategory="102"
        android:icon="@drawable/ic_info_black_24dp"
        app:showAsAction="never" />
    <item
        android:title="@string/sign_out"
        android:id="@+id/id_sign_out"
        android:orderInCategory="103"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        app:showAsAction="never"/>


</menu>