<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.About">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/white"
        android:id="@+id/ToolbarAbout">

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/AboutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/ToolbarAbout">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/ivAboutImage"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvAppName"
            android:textSize="20sp"
            android:textIsSelectable="true"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/ivAboutImage" />

        <TextView
            android:id="@+id/tvAppVersion"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAppName"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/app_version"
            android:textAlignment="center"
            android:textColor="@color/info2"
            android:textIsSelectable="true"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/AboutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AboutTop">
        <TextView
            android:padding="10dp"
            android:id="@+id/info1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info1"
            android:textStyle="bold"
            android:textColor="@color/info1"
            android:textSize="15sp"/>
        <TextView
            android:padding="10dp"
            android:id="@+id/info2"
            android:layout_below="@+id/info1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/info2"
            android:text="@string/info2"
            android:textSize="15sp"/>
        <TextView
            android:padding="10dp"
            android:id="@+id/info3"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/info2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/info3"
            android:text="@string/info3"
            android:textSize="15sp"/>
    </RelativeLayout>


</RelativeLayout>
</ScrollView>
