<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent"
    android:elevation="4dp">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.example.internshipapp.Activities.Utils.LetterImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/ivDayDetails"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSubjectDayDetails"
        android:text="@string/subjects"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_toRightOf="@+id/ivDayDetails"
        android:layout_toEndOf="@+id/ivDayDetails"
        android:layout_alignTop="@+id/ivDayDetails"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/tvTimeDayDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ivDayDetails"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:text="@string/time" />

    <TextView
        android:id="@+id/tvFacultyDayDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ivDayDetails"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tvSubjectDayDetails"
        android:layout_toEndOf="@+id/ivDayDetails"
        android:text="@string/faculty_name" />

</RelativeLayout>

</android.support.v7.widget.CardView>