<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="5dp"
    android:background="@color/colorAccent"
    android:elevation="4dp">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="105dp"
        android:id="@+id/ivMain"
        android:layout_marginLeft="11dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="11dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvMain"
        android:text="@string/timetable"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="6dp"
        android:layout_toEndOf="@+id/ivMain"
        android:textStyle="bold"
        android:layout_toRightOf="@+id/ivMain"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDescription"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_toEndOf="@+id/ivMain"
        android:text="@string/description"
        android:layout_below="@+id/tvMain"
        android:layout_toRightOf="@+id/ivMain"
        android:textSize="16sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvClick"
        android:textSize="12sp"
        android:text="@string/click_here"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/tvDescription"
        android:layout_alignBottom="@+id/ivMain"/>
</RelativeLayout>

</android.support.v7.widget.CardView>