<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.FacultyDetails">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/white"
        android:id="@+id/ToolbarFacultyDetails">

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/FacultyTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/ToolbarFacultyDetails">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:id="@+id/ivFaculty"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo_faculty" />

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvFacultySelName"
            android:textSize="16sp"
            android:textIsSelectable="true"
            android:text="@string/faculty_name"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/ivFaculty" />

    </RelativeLayout>


    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/CardView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/FacultyTop"
        android:elevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPhoneNumberLabel"
                android:text="@string/phone_number"
                android:textColor="@color/textcolor"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/line1"
                android:background="@color/colorAccent"
                android:layout_below="@+id/tvPhoneNumberLabel"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPhoneNumber"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:textIsSelectable="true"
                android:text="@string/number"
                android:textSize="14sp"
                android:layout_below="@+id/line1"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:id="@+id/CardView2"
        android:layout_below="@+id/CardView1"
        android:elevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvEmailLabel"
                android:textColor="@color/textcolor"
                android:text="@string/email_address"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/line2"
                android:background="@color/colorAccent"
                android:layout_below="@+id/tvEmailLabel"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvEmail"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:textIsSelectable="true"
                android:text="@string/email"
                android:textSize="14sp"
                android:layout_below="@+id/line2"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CardView3"
        android:background="@color/colorAccent"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/CardView2"
        android:elevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPlaceLabel"
                android:textColor="@color/textcolor"
                android:text="@string/subject"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/line3"
                android:background="@color/colorAccent"
                android:layout_below="@+id/tvPlaceLabel"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPlace"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/subject_ex"
                android:textIsSelectable="true"
                android:textSize="14sp"
                android:layout_below="@+id/line3"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>

</ScrollView>